python/src/rabbit/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbits  #used to create a namespace called rabbits.
