python/src/rabbit/k8s/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-statefulset
spec:
  serviceName: rabbitmq
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq-pod
  template:
    metadata:
      labels:
        app: rabbitmq-pod
    spec:
      serviceAccountName: rabbitmq-rbac
      containers:
        - name: rabbitmq-container
          image: rabbitmq:3.8-management
          ports:
            - containerPort: 4369
              name: discovery
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
          volumeMounts:
            - name: rabbitmq-volume
              mountPath: /var/lib/rabbitmq
              readOnly: false
            - name: config-file
              mountPath: /config/
            - name: plugins-file
              mountPath: /etc/rabbitmq/
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: config-file
          emptyDir: {}
        - name: plugins-file
          emptyDir: {}
        - name: config
          configMap:
            name: rabbitmq-config
            defaultMode: 0755
  volumeClaimTemplates:   #dynamic provisioning
    - metadata:
        name: rabbitmq-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: standard   #this name might change in prod env.
        resources:
          requests:
            storage: 100Mi
