python/src/rabbit/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: rabbits
spec:
  selector:
    app: rabbitmq-pod #used to select what pod-names to forward requests to.
  type: LoadBalancer 
  ports:
    - name: http
      port: 15672 #receives here
      targetPort: 15672 #forwards requests to this port.
      protocol: TCP
    - name: amqp
      port: 5673 #receives here
      targetPort: 5672 #forwards requests to this port.
      protocol: TCP
