python/src/rabbit/k8s/ingress.yaml
#This file was needed cuz rabbitMQ has a gui which we need to be able to access directly from outside.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  rules:
    - host: rabbitmq-manager.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15673  #forward request to this port.
